adapt the articles with kramdown

--- a/_posts/2015-11-11-curl.md
+++ b/_posts/2015-11-11-curl.md
@@ -6,7 +6,7 @@ tags:   linux curl
 ---
 curl作为最常用的HTTP client模拟工具，基本的用法还是要了解的。
 
-###HTTP POST
+#### HTTP POST
 
 -d 需要Post的数据，或通过@引用本地文件
 -H 更改请求头，如果Headers有多行，可以添加多个-H
@@ -22,7 +22,7 @@ curl -v -d 'mailNum=EA038500686NL&checkCode=981937' -b 'JSESSIONID=C7LZWGGccR1h9
 
 
 
-###HTTP GET
+#### HTTP GET
 
 ```bash
 curl -v "http://127.0.0.1:5000/?signature=bafb00117d9775162f1084df40f39bfc23b6d61c&echostr=1159902683469627124&timestamp=1446156884&nonce=331675590"
