--- a/_posts/2015-11-10-bash.md
+++ b/_posts/2015-11-10-bash.md
@@ -4,7 +4,7 @@ title:  "Bash"
 categories: linux
 tags:   linux bash
 ---
-###更改Bash History历史命令总数
+#### 更改Bash History历史命令总数
 通过C-r查找历史命令的时候,之前用过的命令没有了...
 发现默认的bashrc配置,只记录最近的1000条命令;
 下面是如何修改history命令数:
