update the Title

--- a/_posts/2019-1-11-law.md
+++ b/_posts/2019-1-11-law.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Law"
+title:  "2019-1-11-law"
 categories: dutch-theory-test-car
-tags:  Theory-test 
+tags:  Theory-test
 ---
 
 ![](/images/2019-01-11-06-51-56.png)
