update road user

--- a/_posts/2018-10-29-road-user.md
+++ b/_posts/2018-10-29-road-user.md
@@ -10,3 +10,17 @@ tags:  Theory-test
 ![](/images/2018-10-29-06-58-28.png)
 ![](/images/2018-10-29-07-09-36.png)
 
+![](/images/2019-01-13-20-41-10.png)
+
+![](/images/2019-01-13-20-44-37.png)
+
+A blue background is used for **taxis**.
+
+![](/images/2019-01-13-20-48-49.png)
+
+![](/images/2019-01-13-20-51-45.png)
+
+![](/images/2019-01-13-20-53-11.png)
+
+![](/images/2019-01-13-20-55-03.png)
+
