--- a/_posts/2019-1-27-exam13.md
+++ b/_posts/2019-1-27-exam13.md
@@ -10,3 +10,5 @@ tags:  Theory-test
 ![](/images/2019-01-27-08-32-49.png)
 
 ![](/images/2019-01-27-08-33-20.png)
+
+![](/images/2019-01-27-09-30-50.png)
