--- a/_posts/2019-1-27-exam13.md
+++ b/_posts/2019-1-27-exam13.md
@@ -12,3 +12,38 @@ tags:  Theory-test
 ![](/images/2019-01-27-08-33-20.png)
 
 ![](/images/2019-01-27-09-30-50.png)
+
+![](/images/2019-01-27-19-57-30.png)
+
+![](/images/2019-01-27-19-58-31.png)
+
+**NO**
+
+![](/images/2019-01-27-20-01-39.png)
+
+![](/images/2019-01-27-20-03-17.png)
+
+![](/images/2019-01-27-20-04-52.png)
+
+![](/images/2019-01-27-20-07-08.png)
+
+![](/images/2019-01-27-20-08-21.png)
+
+**C**
+
+![](/images/2019-01-27-20-09-54.png)
+
+![](/images/2019-01-27-20-11-43.png)
+
+**A**
+
+![](/images/2019-01-27-20-15-29.png)
+
+![](/images/2019-01-27-20-18-09.png)
+
+![](/images/2019-01-27-20-18-39.png)
+
+![](/images/2019-01-27-20-19-24.png)
+
+![](/images/2019-01-27-20-20-18.png)
+
