--- a/_posts/2019-1-27-exam13.md
+++ b/_posts/2019-1-27-exam13.md
@@ -47,3 +47,33 @@ tags:  Theory-test
 
 ![](/images/2019-01-27-20-20-18.png)
 
+![](/images/2019-01-27-20-41-59.png)
+
+![](/images/2019-01-27-20-43-14.png)
+
+![](/images/2019-01-27-20-44-07.png)
+
+![](/images/2019-01-27-20-44-42.png)
+
+![](/images/2019-01-27-20-45-51.png)
+
+![](/images/2019-01-27-20-47-45.png)
+
+**NO**
+
+![](/images/2019-01-27-20-49-27.png)
+
+![](/images/2019-01-27-20-51-15.png)
+
+![](/images/2019-01-27-20-56-46.png)
+
+**A**
+
+If it is foggy, visibility may sometimes be good and sometimes it may be bad. The fog may suddenly become very dense. It may also be dangerous to follow the driver ahead of you. He might be driving much too fast.
+
+![](/images/2019-01-27-20-59-15.png)
+
+![](/images/2019-01-27-21-01-29.png)
+
+![](/images/2019-01-27-21-02-14.png)
+
