--- a/_posts/2019-1-28-exam14.md
+++ b/_posts/2019-1-28-exam14.md
@@ -39,3 +39,6 @@ tags:  Theory-test
 
 ![](/images/2019-01-28-20-28-44.png)
 
+![](/images/2019-01-28-22-03-59.png)
+
+![](/images/2019-01-28-22-04-32.png)
