--- a/_posts/2019-1-31-exam17.md
+++ b/_posts/2019-1-31-exam17.md
@@ -46,3 +46,17 @@ Always have a clear view through your windscreen and front side windows. In addi
 
 ![](/images/2019-01-31-17-17-25.png)
 
+![](/images/2019-01-31-21-00-26.png)
+
+![](/images/2019-01-31-21-02-45.png)
+
+![](/images/2019-01-31-21-07-41.png)
+
+![](/images/2019-01-31-21-08-13.png)
+
+![](/images/2019-01-31-21-08-41.png)
+
+![](/images/2019-01-31-21-09-53.png)
+
+![](/images/2019-01-31-21-10-22.png)
+
