--- a/_posts/2020-5-6-gRPC.md
+++ b/_posts/2020-5-6-gRPC.md
@@ -58,3 +58,7 @@ These benefits make gRPC ideal for:
  - Lightweight microservices where efficiency is critical.
  - Polyglot systems where multiple languages are required for development.
  - Point-to-point real-time services that need to handle streaming requests or responses.
+
+gRPC not supported on Azure App Service
+
+> ASP.NET Core gRPC is not currently supported on Azure App Service or IIS. The HTTP/2 implementation of Http.Sys does not support HTTP response trailing headers which gRPC relies on. For more information, see this GitHub issue.
