--- a/_posts/2020-5-12-MEAN.md
+++ b/_posts/2020-5-12-MEAN.md
@@ -1,11 +1,10 @@
 ---
 layout: post
-title:  "Deploy MEAN website with Azure VMs"
+title:  "Deploy a MEAN website with Azure VMs"
 categories: azure
 tags:   vm azure
 ---
 
-## Deploy a website with Azure VMs
 
 MEAN is a development stack for building and hosting web applications. Recall that MEAN is an acronym for its component parts: MongoDB, Express, AngularJS, and Node.js.
 
