--- a/_posts/2021-3-30-helm.md
+++ b/_posts/2021-3-30-helm.md
@@ -11,9 +11,15 @@ tags:   k8s minikube
 ## Basic usage
 
 ```sh
+cd loyalty-cloud
 ENV=eneco-staging
-helm list -n $ENV
+# Create k8s namespace
+kubectl create namespace $ENV
+# Install loyalty-cloud with the client particular setting
+helm install $ENV -f charts/loyalty-cloud/values-production-mwise.yaml -f charts/loyalty-cloud/client_configurations/values-$ENV.yaml -n $ENV charts/loyalty-cloud
 
+# Upgrade to latest version
+helm list -n $ENV
 helm upgrade $ENV -f charts/loyalty-cloud/values-production-mwise.yaml -f charts/loyalty-cloud/client_configurations/values-$ENV.yaml -n $ENV charts/loyalty-cloud
 
 # Rollback
