--- a/_posts/2021-3-30-helm.md
+++ b/_posts/2021-3-30-helm.md
@@ -16,7 +16,7 @@ ENV=eneco-staging
 # Create k8s namespace
 kubectl create namespace $ENV
 # Install loyalty-cloud with the client particular setting
-helm install $ENV -f charts/loyalty-cloud/values-production-mwise.yaml -f charts/loyalty-cloud/client_configurations/values-$ENV.yaml -n $ENV charts/loyalty-cloud
+helm install $ENV -f charts/loyalty-cloud/values-production-$ENV.yaml -n $ENV charts/loyalty-cloud
 
 # Upgrade to latest version
 helm list -n $ENV
