--- a/_posts/2021-3-30-helm.md
+++ b/_posts/2021-3-30-helm.md
@@ -24,6 +24,9 @@ helm upgrade $ENV -f charts/loyalty-cloud/values-production-mwise.yaml -f charts
 
 # Rollback
 helm rollback -n $ENV $ENV
+
+# List history
+helm history -n $ENV $ENV
 ```
 
 ### Database initialization
