AZ204: Azure Container Registry

--- a/_posts/2021-10-25-AZ204.md
+++ b/_posts/2021-10-25-AZ204.md
@@ -39,6 +39,30 @@ If you're trying to decide between using Azure Resource Manager templates and on
 
 ### Exercise: Create and deploy Azure Resource Manager templates by using Visual Studio Code
 
+```bash
+# Create resource group
+az group create --name az204-arm-rg --location westeurope
+# Deploy storage account using arm
+az deployment group create --resource-group az204-arm-rg --template-file azuredeploy.json --parameters azuredeploy.parameters.json
+```
 
+## Manage container images in Azure Container Registry
+
+```bash
+# Download Dockerfile example
+echo FROM mcr.microsoft.com/hello-world > Dockerfile
+az acr build -h
+# Build image and push it to acr
+az acr build -t sample/hello-world -r sfanacr .
+# List the repos in your acr
+az acr repository list -n sfanacr
+# Run container image remotely
+az acr run -r sfanacr --cmd '$Registry/sample/hello-world' /dev/null
+# Run container locally
+## login to acr
+az acr login -n sfanacr
+Login Succeeded
+docker run sfanacr.azurecr.io/sample/hello-world
+```
 
 ## Reference
