AZ204: Azure container instance

--- a/_posts/2021-10-25-AZ204.md
+++ b/_posts/2021-10-25-AZ204.md
@@ -65,4 +65,42 @@ Login Succeeded
 docker run sfanacr.azurecr.io/sample/hello-world
 ```
 
+## Run container images in Azure Container Instances
+
+
+- Fast startup: ACI can start containers in Azure in seconds, without the need to provision and manage VMs
+- Container access: ACI enables exposing your container groups directly to the internet with an IP address and a fully qualified domain name (FQDN)
+- Hypervisor-level security: Isolate your application as completely as it would be in a VM
+- Customer data: The ACI service stores the minimum customer data required to ensure your container groups are running as expected
+- Custom sizes: ACI provides optimum utilization by allowing exact specifications of CPU cores and memory
+- Persistent storage: Mount Azure Files shares directly to a container to retrieve and persist state
+- Linux and Windows: Schedule both Windows and Linux containers using the same API.
+
+![](/images/2021-10-28-19-49-35.png)
+
+
+```bash
+DNS_NAME_LABEL=aci-fan-$RANDOM
+# create a container
+az container create --resource-group az204-arm-rg \
+    --name mycontainer \
+    --image mcr.microsoft.com/azuredocs/aci-helloworld \
+    --ports 80 \
+    --dns-name-label $DNS_NAME_LABEL --location westeurope
+    # Set restart policy
+    --restart-policy OnFailure
+    # Set environment variables
+    --environment-variables 'NumWords'='5' 'MinLength'='8'
+    # Mount volume
+    --azure-file-volume-account-name $ACI_PERS_STORAGE_ACCOUNT_NAME \
+    --azure-file-volume-account-key $STORAGE_KEY \
+    --azure-file-volume-share-name $ACI_PERS_SHARE_NAME \
+    --azure-file-volume-mount-path /aci/logs/
+# Verify the container is running
+az container show --resource-group az204-arm-rg \
+    --name mycontainer
+# clean up resource
+az container delete -g az204-arm-rg -n $DNS_NAME_LABEL
+```
+
 ## Reference
