AZ204: Azure Web App

--- a/_posts/2021-10-25-AZ204.md
+++ b/_posts/2021-10-25-AZ204.md
@@ -103,4 +103,50 @@ az container show --resource-group az204-arm-rg \
 az container delete -g az204-arm-rg -n $DNS_NAME_LABEL
 ```
 
+## Create Azure App Service Web Apps
+
+### create an Azure App Service Web App
+
+
+
+### enable diagnostics logging
+
+https://docs.microsoft.com/en-us/azure/app-service/troubleshoot-diagnostic-logs
+
+### deploy code to a web app
+
+**Automated deployment**
+
+- Azure DevOps
+- GitHub
+
+
+**Manual deployment**
+
+- Git
+- az webapp up
+- VSCode
+
+```bash
+# create dotnet core webapi
+dotnet new webapi
+# verify locally
+dotnet build
+dotnet run
+
+# deploy the webapi to Azure web app using vscode
+curl https://sfan.azurewebsites.net/WeatherForecast
+```
+
+### configure web app settings including SSL, API settings, and connection strings
+
+
+
+## Implement Azure security
+
+### develop code that uses keys, secrets, and certificates stored in Azure Key Vault
+
+**import certificate into key vault**
+![](/images/2021-11-01-20-33-42.png)
+
 ## Reference
