AZ204 Cosmos DB

--- a/_posts/2021-10-25-AZ204.md
+++ b/_posts/2021-10-25-AZ204.md
@@ -242,7 +242,25 @@ For your app to work with HTTP primitives, you need to configure a few things:
 }
 ```
 
+## Develop solutions that use Cosmos DB storage
 
+
+Solutions that **benefit** from Azure Cosmos DB
+
+Any web, mobile, gaming, and IoT application that needs to handle massive amounts of data, reads, and writes at a global scale with near-real response times for a variety of data will benefit from Cosmos DB's guaranteed high availability, high throughput, low latency, and tunable consistency.
+
+### Choose an API in Azure Cosmos DB
+
+![](/images/2021-11-11-20-00-40.png)
+
+### Data modeling in Azure Cosmos DB
+
+https://docs.microsoft.com/en-us/azure/cosmos-db/sql/modeling-data
+
+
+### Partition data
+
+https://docs.microsoft.com/en-us/azure/cosmos-db/sql/how-to-model-partition-example
 
 ## Implement Azure security
 
