AZ204: Blob storage

--- a/_posts/2021-10-25-AZ204.md
+++ b/_posts/2021-10-25-AZ204.md
@@ -260,7 +260,59 @@ https://docs.microsoft.com/en-us/azure/cosmos-db/sql/modeling-data
 
 ### Partition data
 
+https://docs.microsoft.com/en-us/azure/cosmos-db/partitioning-overview
 https://docs.microsoft.com/en-us/azure/cosmos-db/sql/how-to-model-partition-example
+
+
+### set the appropriate consistency level for operations
+
+https://docs.microsoft.com/en-us/azure/cosmos-db/consistency-levels
+
+```json
+  "consistencyPolicy": {
+    "defaultConsistencyLevel": "Session",
+    "maxIntervalInSeconds": 5,
+    "maxStalenessPrefix": 100
+  },
+
+```
+
+## Blob storage
+
+### Move items in Blob storage between storage accounts or containers
+
+```sh
+# Azure CLI
+az storage copy -s https://az204storageacctarm.blob.core.windows.net/azure-webjobs-secrets -d https://az204storageacctarm.blob.core.windows.net/sfan --recursive --account-key xxx
+
+# AzCopy
+# .NET Storage Client library
+
+```
+
+### set and retrieve properties and metadata
+
+Blob containers support system properties and user-defined metadata, in addition to the data they contain.
+
+**Retrieving properties and metadata via REST**
+
+```bash
+curl -I  https://lcdev.blob.core.windows.net/development/assets/00_featured_shrek_smiling_in_mud_bath_0688afc539.jpeg
+
+HTTP/1.1 200 OK
+Content-Length: 49134
+Content-Type: image/jpeg
+Last-Modified: Fri, 23 Jul 2021 14:24:54 GMT
+ETag: 0x8D94DE5A43E00EE
+Vary: Origin
+Server: Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
+x-ms-request-id: 48957174-c01e-008a-4827-dbb11f000000
+x-ms-version: 2009-09-19
+x-ms-lease-status: unlocked
+x-ms-blob-type: BlockBlob
+Date: Tue, 16 Nov 2021 20:24:17 GMT
+
+```
 
 ## Implement Azure security
 
