AZ204 Blob storage lifecycle management

--- a/_posts/2021-10-25-AZ204.md
+++ b/_posts/2021-10-25-AZ204.md
@@ -314,6 +314,29 @@ Date: Tue, 16 Nov 2021 20:24:17 GMT
 
 ```
 
+### Azure Blob storage lifecycle
+
+Blob storage is designed for:
+
+- Serving images or documents directly to a browser.
+- Storing files for distributed access.
+- Streaming video and audio.
+- Writing to log files.
+- Storing data for backup and restore, disaster recovery, and archiving.
+- Storing data for analysis by an on-premises or Azure-hosted service.
+
+```bash
+# create block blob storage account
+
+```
+
+
+Azure storage offers different access tiers, allowing you to store blob object data in the most cost-effective manner. Available access tiers include:
+
+- Hot - Optimized for storing data that is accessed frequently.
+- Cool - Optimized for storing data that is infrequently accessed and stored for at least 30 days.
+- Archive - Optimized for storing data that is rarely accessed and stored for at least 180 days with flexible latency requirements, on the order of hours.
+
 ## Implement Azure security
 
 ### develop code that uses keys, secrets, and certificates stored in Azure Key Vault
