azure key vault

--- a/_posts/2021-10-25-AZ204.md
+++ b/_posts/2021-10-25-AZ204.md
@@ -339,6 +339,60 @@ Azure storage offers different access tiers, allowing you to store blob object d
 
 ## Implement Azure security
 
+### Implement user authentication and authorization
+
+**Microsoft identity platform**
+
+https://docs.microsoft.com/en-us/learn/modules/implement-authentication-by-using-microsoft-authentication-library/4-interactive-authentication-msal
+
+
+**Implement shared access signatures**
+
+A shared access signature (SAS) is a URI that grants restricted access rights to Azure Storage resources. You can provide a shared access signature to clients that you want grant delegate access to certain storage account resources.
+
+![](/images/2021-11-24-19-46-52.png)
+
+
+## Implement secure cloud solutions
+
+### secure app configuration data by using App Configuration Azure Key Vault
+
+**Enable managed identity on azure app service**
+
+```sh
+az webapp identity assign \
+    --resource-group learn-2cdbb38a-41ed-4c3b-8e2a-a9c94457cd1e \
+    --name keyvault-sfan-app
+
+{
+  "principalId": "40d7d056-5836-4e46-a61d-1887ba4259c0",
+  "tenantId": "604c1504-c6a3-4080-81aa-b33091104187",
+  "type": "SystemAssigned",
+  "userAssignedIdentities": null
+}
+```
+
+The last step before deploying is to assign Key Vault permissions to your app's managed identity. Make sure to enter both your unique vault name to the --name parameter, and enter the principalId value you copied from the previous step as the value for object-id in the following command. To establish Get and List access, run this command.
+
+```sh
+# assign permissions
+az keyvault set-policy \
+    --secret-permissions get list \
+    --name learn-sfan \
+    --object-id 40d7d056-5836-4e46-a61d-1887ba4259c0
+
+# deploy app
+dotnet publish -o pub
+zip -j site.zip pub/*
+
+az webapp deployment source config-zip \
+    --src site.zip \
+    --resource-group learn-2cdbb38a-41ed-4c3b-8e2a-a9c94457cd1e \
+    --name keyvault-sfan-app
+```
+
+
+
 ### develop code that uses keys, secrets, and certificates stored in Azure Key Vault
 
 **import certificate into key vault**
