Azure Cache for Redis

--- a/_posts/2021-10-25-AZ204.md
+++ b/_posts/2021-10-25-AZ204.md
@@ -398,4 +398,6 @@ az webapp deployment source config-zip \
 **import certificate into key vault**
 ![](/images/2021-11-01-20-33-42.png)
 
+### implement Managed Identities for Azure resources
+
 ## Reference
