AZ204 redis Exercise using .net Core

--- a/_posts/2021-12-10-AZ204 Cache.md
+++ b/_posts/2021-12-10-AZ204 Cache.md
@@ -38,4 +38,43 @@ Accessing the Redis instance
 | `del [key]` | Deletes the value associated with the **key**. |
 | `flushdb` | Delete *all* keys and values in the database. |
 
+```sh
+# https://medium.com/@therealjordanlee/connecting-to-azure-cache-redis-with-redis-cli-and-stunnel-6e5c5479bc2c
+sudo apt install -y redis-tools stunnel4
+
+```
+
 ## Exercise: Connect an app to Azure Cache for Redis by using .NET Core
+
+```csharp
+// dotnet new console -o Rediscache
+// Program.cs
+using System;
+using StackExchange.Redis;
+using System.Threading.Tasks;
+
+namespace Rediscache
+{
+    class Program
+    {
+        static string connectionString = "sfan-redis.redis.cache.windows.net:6380,password=xxx,ssl=True,abortConnect=False";
+
+        static async Task Main(string[] args)
+        {
+            Console.WriteLine("Hello World!");
+
+            using(var cache = ConnectionMultiplexer.Connect(connectionString))
+            {
+                var db = cache.GetDatabase();
+                var result = await db.ExecuteAsync("ping");
+                Console.WriteLine($"{result.Type} {result}");
+
+                bool setValue = await db.StringSetAsync("key:test", "200");
+                var getValue = await db.StringGetAsync("key:test");
+                Console.WriteLine($"GET: {value}");
+            }
+        }
+    }
+}
+
+```
