--- a/_posts/2021-12-10-AZ204 Cache.md
+++ b/_posts/2021-12-10-AZ204 Cache.md
@@ -7,6 +7,12 @@ tags:   azure az204 cache
 
 # [Integrate caching and content delivery within solutions](https://docs.microsoft.com/en-us/learn/paths/az-204-integrate-caching-content-delivery-within-solutions/)
 
+
+## [Best practices Caching](https://docs.microsoft.com/en-us/azure/architecture/best-practices/caching)
+
+
+
+
 ## Develop for Azure Cache for Redis
 
 After completing this module, you'll be able to:
