--- a/_posts/2022-1-14-AZ204 Practice.md
+++ b/_posts/2022-1-14-AZ204 Practice.md
@@ -22,3 +22,60 @@ You need to design the process that starts the photo processing.
 Solution: Trigger the photo processing from Blob storage events.
 
 ![](/images/2022-01-20-20-31-55.png)
+
+
+![](/images/2022-01-23-08-01-58.png)
+
+
+![](/images/2022-01-23-08-22-13.png)
+
+
+### [Page 5](https://www.examtopics.com/exams/microsoft/az-204/view/5/)
+
+21. 
+```Dockerfile
+FROM
+WORKDIR
+COPY
+RUN
+CMD
+```
+
+22. A   x
+
+You are developing an Azure Function App that processes images that are uploaded to an Azure Blob container.
+Images must be processed as quickly as possible after they are uploaded, and the solution must minimize latency. You create code to process images when the
+Function App is triggered.
+You need to configure the Function App.
+What should you do?
+
+A. Use an App Service plan. Configure the Function App to use an Azure Blob Storage input trigger.
+
+B. Use a Consumption plan. Configure the Function App to use an Azure Blob Storage trigger.
+
+C. Use a Consumption plan. Configure the Function App to use a Timer trigger.
+
+D. Use an App Service plan. Configure the Function App to use an Azure Blob Storage trigger. Most Voted
+
+E. Use a Consumption plan. Configure the Function App to use an Azure Blob Storage input trigger.
+
+23. 
+```
+copyIndex
+copy
+dependsOn
+```
+
+24.
+```
+N
+N   x   maxDequeueCount
+Y
+Y
+```
+![](/images/2022-01-25-20-14-04.png)
+
+25.
+Strong
+Bounded Staleness
+Eventual
