AZ204 practice page 6

--- a/_posts/2022-1-14-AZ204 Practice.md
+++ b/_posts/2022-1-14-AZ204 Practice.md
@@ -79,3 +79,39 @@ Y
 Strong
 Bounded Staleness
 Eventual
+
+
+### [Page 6](https://www.examtopics.com/exams/microsoft/az-204/view/6/)
+
+26. 
+Azure Backup    **X**  PowerShell
+
+https://docs.microsoft.com/en-us/azure/virtual-machines/windows/capture-image-resource#create-an-image-of-a-vm-using-powershell
+
+
+Azure Blob storage
+
+27.
+D   X   BD
+
+
+28.
+Create
+Export
+Modify
+Deploy
+Use
+
+29.
+Hybrid Runbook Worker       X
+
+Custom Script Extension     X
+
+https://docs.microsoft.com/en-us/azure/virtual-machines/run-command-overview
+
+30.
+New-AzResourceGroup
+New-AzAppServicePlan
+New-AzWebapp
+New-AzWebappSlot
+
