--- a/_posts/2022-1-14-AZ204 Practice.md
+++ b/_posts/2022-1-14-AZ204 Practice.md
@@ -115,3 +115,27 @@ New-AzAppServicePlan
 New-AzWebapp
 New-AzWebappSlot
 
+### [Page 7](https://www.examtopics.com/exams/microsoft/az-204/view/7/)
+
+31.
+-AssignIdentity $UserAssigned      **X**
+
+https://docs.microsoft.com/en-us/azure/active-directory/managed-identities-azure-resources/overview
+
+
+
+32.
+B
+
+33.
+B
+
+34.
+N
+Y
+N
+
+35.
+Custom handler
+
+Trigger
