--- a/_posts/2022-1-14-AZ204 Practice.md
+++ b/_posts/2022-1-14-AZ204 Practice.md
@@ -1,3 +1,11 @@
+---
+layout: post
+title:  "AZ-204: Practice"
+categories: az204
+tags:   azure az204 practice
+---
+
+
 ![](/images/2022-01-14-10-05-54.png)
 
 ![](/images/2022-01-14-10-06-11.png)
@@ -139,3 +147,25 @@ N
 Custom handler
 
 Trigger
+
+
+### [Page 8](https://www.examtopics.com/exams/microsoft/az-204/view/8/)
+
+36.
+WEBSITE
+
+/home
+
+https://docs.microsoft.com/en-us/azure/app-service/reference-app-settings?tabs=kudu%2Cdotnet#custom-containers
+
+
+37.
+
+AC  X
+
+![](/images/2022-01-31-08-58-16.png)
+
+38.
+A   X
+
+![](/images/2022-01-31-09-00-41.png)
